# cll

./: .gitignore  LICENSE  Makefile  README.md  build.sh
cll-deno/: deno.json  main.ts
cll-go/: Makefile  main.go
cll-java/: pom.xml
cll-java/src/main/java/cll/: App.java
cll-java/src/main/java/cpl/: App.java
cll-node/: index.js  package-lock.json  package.json
cpl-go/: Makefile  main.go
cpl-java/: pom.xml
cpl-java/src/main/java/cpl/: App.java
lib/: Cargo.toml  cbindgen.toml
lib/buildScripts/: build.rs
lib/src/: exports.rs  lib.rs
lib/src/core/: fibonacci.rs  greet.rs  mod.rs
lib/src/exports/: go_bindings.rs  java_bindings.rs  node_bindings.rs
