[package]
name = "cll"
version = "0.1.0"
edition = "2021"
build = "./buildScripts/build.rs"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
libc = "0.2"
jni = { version = "0.20.0", optional = true }

[build-dependencies]
cbindgen = "0.27"

[features]
default = []
go = []
java = ["jni"]
node = []
deno = []

[profile.release]
debug = false
lto = true
